--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-google-maps/api": "2.20.7",
     "axios": "1.12.2",
+    "dotenv": "^17.2.3",
     "leaflet": "1.9.4",
+    "lucide-react": "^0.555.0",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "react-icons": "5.5.0",
